# jusi-opencode

./: LICENSE  Makefile  README.md  pyproject.toml
src/jusi_opencode/: __init__.py  commands.py  config.py  debug.py  git_artifacts.py  kernel.py  opencode_cli.py  payload.py  plugin.py  runner.py  sheet.py  state.py
tests/: test_config_state.py  test_opencode_cli.py  test_plugin.py  test_runtime.py
